Add company address and GST fields mapping to UnbilledInvoiceSummaryDto